[package]
name = "unbox"
version = "0.3.0"
description = "Unshare a toolbox"
license = "MPL-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lopukhov/unbox"
keywords = ["containers", "toolbox", "unbox", "linux"]
categories = ["virtualization"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
indicatif = "0.17.0"
nix = "0.25"
tar = "0.4"
users = "0.11"

[profile.optimized]
inherits = "release"
lto = true
strip = true
codegen-units = 1
