[package]
name = "unbox"
version = "0.5.0"
description = "Unshare a toolbox"
license = "MPL-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lopukhov/unbox"
keywords = ["containers", "toolbox", "unbox", "linux"]
categories = ["virtualization"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = { version = "0.6", default-features = false }
indicatif = "0.17"
nix = "0.26"
serde = { version = "1", features = ["derive"] }
tabled = { version = "0.10", default-features = false }
tar = "0.4"
toml = "0.5"
users = "0.11"
walkdir = "2"

[profile.optimized]
inherits = "release"
lto = true
strip = true
codegen-units = 1
